--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,13 @@
 h1 {
     color: #ff0000;
+    text-align: center;
 }
 
 form.login_form {
     margin-left: auto;
     margin-right: auto;
     max-width: 450px;
-    background-color: #ffcc00;
+    background-color: #f2ddc6;
     border: 1px solid gray;
     border-radius: 5px;
     padding: 10px;
